2012-08-13 Borut Razem <borut.razem AT gmail.com>

	* local/wizzard.mk: use -fsigned-char since ARM default is unsigned char

2012-08-12 Borut Razem <borut.razem AT gmail.com>

	* lib/variables.mk: reintroduced CROSSREGTESTTARGETS, 2nd try

2012-08-11 Borut Razem <borut.razem AT gmail.com>

	* lib/variables.mk: reintroduced CROSSREGTESTTARGETS

2012-08-08 Borut Razem <borut.razem AT gmail.com>

	* sdcc-build-bootstrap.sh:
	  maximum age of lockfile increased to 1440 minutes = 1 day
	* lib/variables.mk: CROSSREGTESTTARGETSx renamed to
	  REGTESTTARGETSx since they have nothing to do wit cross-compiletion
	* local/mypants.mk: removed useless SLOWHOST definition
	* local/wizzard.mk:
	  created for Rasbian (Debian on Raspberry Pi) ARMv6 armhf machine

2012-06-04 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* lib/variables.mk: use the 3 regression tests groups for all hosts

2012-06-02 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* lib/variables.mk: split up regression tests into 3 groups
	* local/mypants.mk: set SLOWHOST flag so only a partial regression
	  test done each day (two days for complete tests)

2012-05-31 Borut Razem <borut.razem AT gmail.com>

	* components/sdcc.mk: fixed bug #3531055 - PIC18F24K22
	  by enabling building of new pics

2012-05-21 Philipp Klaus Krause <pkk AT spth.de>

	* lib/variables.mk:
	  Enable testing of s08 and r3ka ports.

2012-03-17 Borut Razem <borut.razem AT gmail.com>

	* local/netbsd-i386.mk: disabled -j 2 since src/SDCCnaddr.cc
	  compilation mysteriously fails if enabled

2012-03-13 Borut Razem <borut.razem AT gmail.com>

	* lib/doc-archive.mk:
	  test if *.txt, *.html and *.pdf exist before copying

2012-03-11 Borut Razem <borut.razem AT gmail.com>

	* lib/variables.mk:
	  use config.guess to detect the default build and host system
	* support/config.guess: added
	* local/derna.mk: added TARGETCPPFLAGS

2012-03-09 Borut Razem <borut.razem AT gmail.com>

	* local/solaris-x86.mk: added TARGETCPPFLAGS
