@@ -1,3 +1,8 @@
+2012-08-15 Borut Razem <borut.razem AT gmail.com>
+
+	* local/wizzard.mk: spawn 1 make process:
+	  spawning 2 processes leads to a compilation error
+
 2012-08-13 Borut Razem <borut.razem AT gmail.com>
 
 	* local/wizzard.mk: use -fsigned-char since ARM default is unsigned char
